--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ install:
   - npm install
 script:
   - npm test
-deploy:
-  - provider: script
-    skip_cleanup: true
-    script: chmod +x ./deploy.sh && ./deploy.sh
-    on:
-      branch: master
+# deploy:
+#   - provider: script
+#     skip_cleanup: true
+#     script: chmod +x ./deploy.sh && ./deploy.sh
+#     on:
+#       branch: master
